# VulkanBaseEngine

./: .gitignore
dependencies/: CMakeLists.txt
include/application/: application.h
include/logger/: debug_messenger.h  logger.h
include/physics/: particle.h  particle_system.h
include/renderer/: buffer.h  command.h  descriptor.h  device.h  engine.h  frame.h  image.h  instance.h  pipeline.h  pipeline_builder.h  renderer.h  swapchain.h  sync.h
include/systems/: particle_render_system.h  render_system.h
include/utility/: allocator.h  window.h
shaders/: circle.frag  circle.frag.spv  circle.vert  circle.vert.spv
src/application/: application.cpp
src/physics/: particle.cpp  particle_system.cpp
src/renderer/: buffer.cpp  descriptor.cpp  device.cpp  engine.cpp  pipeline.cpp  pipeline_builder.cpp  renderer.cpp
src/systems/: particle_render_system.cpp
